welcome.lessons.welcome.conditions.Conditions.scala.code
a=getX():Int;
b=getY():Int;
buggle==(a,b)
if (buggle=estFaceMur()) {
  recule();
  b==b+1
} else {
  avance()
  b==b+1
}